# DataVerse

./: .env  .gitignore  Dockerfile-my-extension.sh  Original README.md  README.md  ckan.ini  docker-compose.dev.yml
lib/: datapreview.py  plugins.py
src/ckanext-audio_view/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-audio_view/.github/workflows/: test.yml
src/ckanext-audio_view/ckanext/audio_view/: plugin.py
src/ckanext-audio_view/ckanext/audio_view/assets/: script.js  webassets.yml
src/ckanext-audio_view/ckanext/audio_view/tests/: test_plugin.py
src/ckanext-audio_view/ckanext/audio_view/theme/templates/: audio_form.html  audio_view.html
src/ckanext-datasetform/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-datasetform/.github/workflows/: test.yml
src/ckanext-datasetform/ckanext/datasetform/: plugin.py  views.py
src/ckanext-datasetform/ckanext/datasetform/assets/: script.js  webassets.yml
src/ckanext-datasetform/ckanext/datasetform/templates/: footer.html  header.html
src/ckanext-datasetform/ckanext/datasetform/templates/admin/: trash.html
src/ckanext-datasetform/ckanext/datasetform/templates/group/: edit.html  index.html  new.html  new_group_form.html  read_base.html
src/ckanext-datasetform/ckanext/datasetform/tests/: test_plugin.py
src/ckanext-ext1/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-ext1/.github/workflows/: test.yml
src/ckanext-ext1/ckanext/ext1/: plugin.py
src/ckanext-ext1/ckanext/ext1/assets/: script.js  webassets.yml
src/ckanext-ext1/ckanext/ext1/templates/: ext1.html  index.html
src/ckanext-ext1/ckanext/ext1/tests/: test_plugin.py
src/ckanext-extrafields/: MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  test.ini
src/ckanext-extrafields/.github/workflows/: test.yml
src/ckanext-extrafields/ckanext/extrafields/: plugin.py
src/ckanext-extrafields/ckanext/extrafields/assets/: script.js  webassets.yml
src/ckanext-extrafields/ckanext/extrafields/tests/: test_plugin.py
src/ckanext-fileuploader/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-fileuploader/.github/workflows/: test.yml
src/ckanext-fileuploader/ckanext/fileuploader/: plugin.py
src/ckanext-fileuploader/ckanext/fileuploader/assets/: script.js  webassets.yml
src/ckanext-fileuploader/ckanext/fileuploader/tests/: test_plugin.py
src/ckanext-haoyi/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-haoyi/.github/workflows/: test.yml
src/ckanext-haoyi/ckanext/haoyi/: plugin.py
src/ckanext-haoyi/ckanext/haoyi/assets/: styles.css  webassets.yml
src/ckanext-haoyi/ckanext/haoyi/templates/: page1.html  teethpage.html  test.html
src/ckanext-haoyi/ckanext/haoyi/tests/: test_plugin.py
src/ckanext-iauthfunction/: MANIFEST.in  README.md  setup.cfg
src/ckanext-iauthfunction/.github/workflows/: test.yml
src/ckanext-iauthfunction/ckanext/iauthfunction/: plugin.py
src/ckanext-iauthfunction/ckanext/iauthfunction/assets/: script.js  webassets.yml
src/ckanext-iauthfunction/ckanext/iauthfunction/tests/: test_plugin.py
src/ckanext-iauthfunctions/: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-iauthfunctions/.github/workflows/: test.yml
src/ckanext-iauthfunctions/ckanext/iauthfunctions/: plugin.py
src/ckanext-iauthfunctions/ckanext/iauthfunctions/assets/: grouptable.css  script.js  webassets.yml
src/ckanext-iauthfunctions/ckanext/iauthfunctions/templates/: displayGroups.html  personalPackageForm.html  userList.html
src/ckanext-iauthfunctions/ckanext/iauthfunctions/tests/: test_plugin.py
src/ckanext-image_view/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-image_view/.github/workflows/: test.yml
src/ckanext-image_view/ckanext/image_view/: config_declaration.yaml  plugin.py
src/ckanext-image_view/ckanext/image_view/assets/: script.js  webassets.yml
src/ckanext-image_view/ckanext/image_view/tests/: test_plugin.py
src/ckanext-packagecontroller/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-packagecontroller/.github/workflows/: test.yml
src/ckanext-packagecontroller/ckanext/packagecontroller/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-packagecontroller/ckanext/packagecontroller/assets/: script.js  webassets.yml
src/ckanext-packagecontroller/ckanext/packagecontroller/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-packagecontroller/ckanext/packagecontroller/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-resourcecontroller/: MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  test.ini
src/ckanext-resourcecontroller/.github/workflows/: test.yml
src/ckanext-resourcecontroller/ckanext/resourcecontroller/: plugin.py
src/ckanext-resourcecontroller/ckanext/resourcecontroller/assets/: script.js  webassets.yml
src/ckanext-resourcecontroller/ckanext/resourcecontroller/tests/: test_plugin.py
src/ckanext-text_view/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-text_view/.github/workflows/: test.yml
src/ckanext-text_view/ckanext/text_view/: plugin.py
src/ckanext-text_view/ckanext/text_view/assets/: webassets.yml
src/ckanext-text_view/ckanext/text_view/templates/: text_view.html
src/ckanext-text_view/ckanext/text_view/tests/: test_plugin.py
src/ckanext-versiontree/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-versiontree/.github/workflows/: test.yml
src/ckanext-versiontree/ckanext/versiontree/: plugin.py
src/ckanext-versiontree/ckanext/versiontree/assets/: downloadDatasets_style.css  versionTree_script.js  versionTree_style.css  webassets.yml
src/ckanext-versiontree/ckanext/versiontree/templates/: downloadDatasets.html  versionTree.html
src/ckanext-versiontree/ckanext/versiontree/tests/: test_plugin.py
src/ckanext-video_view/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-video_view/.github/workflows/: test.yml
src/ckanext-video_view/ckanext/video_view/: plugin.py
src/ckanext-video_view/ckanext/video_view/assets/: script.js  webassets.yml
src/ckanext-video_view/ckanext/video_view/tests/: test_plugin.py
(+163 files in other folders)
