[metadata]
name = ckanext-audio_view
version = 0.0.1
description = This extension is used to view audio preview files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-audio_view
author = ghy
author_email = ganhaoyi.100@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-audio_view

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             audio_view = ckanext.audio_view.plugin:AudioViewPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/audio_view/i18n/ckanext-audio_view.pot
width = 80

[init_catalog]
domain = ckanext-audio_view
input_file = ckanext/audio_view/i18n/ckanext-audio_view.pot
output_dir = ckanext/audio_view/i18n

[update_catalog]
domain = ckanext-audio_view
input_file = ckanext/audio_view/i18n/ckanext-audio_view.pot
output_dir = ckanext/audio_view/i18n
previous = true

[compile_catalog]
domain = ckanext-audio_view
directory = ckanext/audio_view/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
