[metadata]
name = ckanext-datasetform
version = 0.0.1
description = This extension is to render extra inputs for the dataset creation form.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-datasetform
author = ghy
author_email = ganhaoyi.100@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-datasetform

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             datasetform = ckanext.datasetform.plugin:DatasetformPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datasetform/i18n/ckanext-datasetform.pot
width = 80

[init_catalog]
domain = ckanext-datasetform
input_file = ckanext/datasetform/i18n/ckanext-datasetform.pot
output_dir = ckanext/datasetform/i18n

[update_catalog]
domain = ckanext-datasetform
input_file = ckanext/datasetform/i18n/ckanext-datasetform.pot
output_dir = ckanext/datasetform/i18n
previous = true

[compile_catalog]
domain = ckanext-datasetform
directory = ckanext/datasetform/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
