[metadata]
name = ckanext-ext1
version = 0.0.1
description = This is a testing extension called ext1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-ext1
author = ghy
author_email = ghy
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             ext1 = ckanext.ext1.plugin:Ext1Plugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/ext1/i18n/ckanext-ext1.pot
width = 80

[init_catalog]
domain = ckanext-ext1
input_file = ckanext/ext1/i18n/ckanext-ext1.pot
output_dir = ckanext/ext1/i18n

[update_catalog]
domain = ckanext-ext1
input_file = ckanext/ext1/i18n/ckanext-ext1.pot
output_dir = ckanext/ext1/i18n
previous = true

[compile_catalog]
domain = ckanext-ext1
directory = ckanext/ext1/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
