[metadata]
name = ckanext-haoyi
version = 0.0.1
description = This is haoyi's extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-haoyi
author = haoyi
author_email = haoyi@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             haoyi = ckanext.haoyi.plugin:HaoyiPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/haoyi/i18n/ckanext-haoyi.pot
width = 80

[init_catalog]
domain = ckanext-haoyi
input_file = ckanext/haoyi/i18n/ckanext-haoyi.pot
output_dir = ckanext/haoyi/i18n

[update_catalog]
domain = ckanext-haoyi
input_file = ckanext/haoyi/i18n/ckanext-haoyi.pot
output_dir = ckanext/haoyi/i18n
previous = true

[compile_catalog]
domain = ckanext-haoyi
directory = ckanext/haoyi/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
