[metadata]
name = ckanext-iauthfunction
version = 0.0.1
description = This extension will be used to overwrite authorization i guess.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-iauthfunction
author = ghy
author_email = ganhaoyi.100@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-iauthfunction

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             iauthfunction = ckanext.iauthfunction.plugin:IauthfunctionPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/iauthfunction/i18n/ckanext-iauthfunction.pot
width = 80

[init_catalog]
domain = ckanext-iauthfunction
input_file = ckanext/iauthfunction/i18n/ckanext-iauthfunction.pot
output_dir = ckanext/iauthfunction/i18n

[update_catalog]
domain = ckanext-iauthfunction
input_file = ckanext/iauthfunction/i18n/ckanext-iauthfunction.pot
output_dir = ckanext/iauthfunction/i18n
previous = true

[compile_catalog]
domain = ckanext-iauthfunction
directory = ckanext/iauthfunction/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
