[metadata]
name = ckanext-iauthfunctions
version = 0.0.1
description = documentation tutorial of iauthfunctions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-iauthfunctions
author = ghy
author_email = ghy@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             iauthfunctions = ckanext.iauthfunctions.plugin:IauthfunctionsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/iauthfunctions/i18n/ckanext-iauthfunctions.pot
width = 80

[init_catalog]
domain = ckanext-iauthfunctions
input_file = ckanext/iauthfunctions/i18n/ckanext-iauthfunctions.pot
output_dir = ckanext/iauthfunctions/i18n

[update_catalog]
domain = ckanext-iauthfunctions
input_file = ckanext/iauthfunctions/i18n/ckanext-iauthfunctions.pot
output_dir = ckanext/iauthfunctions/i18n
previous = true

[compile_catalog]
domain = ckanext-iauthfunctions
directory = ckanext/iauthfunctions/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
