[metadata]
name = ckanext-packagecontroller
version = 0.0.1
description = extension to implement IPackageController interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jinruiiii/ckanext-packagecontroller
author = jinrui
author_email = foojinrui123@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-packagecontroller

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             packagecontroller = ckanext.packagecontroller.plugin:PackagecontrollerPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/packagecontroller/i18n/ckanext-packagecontroller.pot
width = 80

[init_catalog]
domain = ckanext-packagecontroller
input_file = ckanext/packagecontroller/i18n/ckanext-packagecontroller.pot
output_dir = ckanext/packagecontroller/i18n

[update_catalog]
domain = ckanext-packagecontroller
input_file = ckanext/packagecontroller/i18n/ckanext-packagecontroller.pot
output_dir = ckanext/packagecontroller/i18n
previous = true

[compile_catalog]
domain = ckanext-packagecontroller
directory = ckanext/packagecontroller/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
