[metadata]
name = ckanext-text_view
version = 0.0.1
description = this extension is used to render the text resource views
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-text_view
author = ghy
author_email = ganhaoyi.100@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-text_view

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             text_view = ckanext.text_view.plugin:TextViewPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/text_view/i18n/ckanext-text_view.pot
width = 80

[init_catalog]
domain = ckanext-text_view
input_file = ckanext/text_view/i18n/ckanext-text_view.pot
output_dir = ckanext/text_view/i18n

[update_catalog]
domain = ckanext-text_view
input_file = ckanext/text_view/i18n/ckanext-text_view.pot
output_dir = ckanext/text_view/i18n
previous = true

[compile_catalog]
domain = ckanext-text_view
directory = ckanext/text_view/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
