[metadata]
name = ckanext-versiontree
version = 0.0.1
description = This extension will be used to generate a version tree.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghy99/ckanext-versiontree
author = ghy
author_email = ganhaoyi.100@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-versiontree

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             versiontree = ckanext.versiontree.plugin:VersiontreePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/versiontree/i18n/ckanext-versiontree.pot
width = 80

[init_catalog]
domain = ckanext-versiontree
input_file = ckanext/versiontree/i18n/ckanext-versiontree.pot
output_dir = ckanext/versiontree/i18n

[update_catalog]
domain = ckanext-versiontree
input_file = ckanext/versiontree/i18n/ckanext-versiontree.pot
output_dir = ckanext/versiontree/i18n
previous = true

[compile_catalog]
domain = ckanext-versiontree
directory = ckanext/versiontree/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
